--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --config ./config/webpack.conf.js",
-    "start": "node config/dev.server.js"
+    "build": "webpack --config ./build/webpack.prod.conf.js",
+    "start": "node ./build/dev.server.js",
+    "build:dll": "node build/dll.js"
   },
   "author": "",
   "license": "ISC",
@@ -25,6 +26,7 @@
     "less-loader": "^4.1.0",
     "redux-log": "^2.0.0",
     "style-loader": "^0.23.1",
+    "uglifyjs-webpack-plugin": "^2.1.3",
     "webpack": "^4.20.2",
     "webpack-cli": "^3.1.0",
     "webpack-dev-middleware": "^3.3.0",
@@ -36,7 +38,10 @@
     "babel-core": "^6.26.3",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "chalk": "^2.4.2",
     "connect-history-api-fallback": "^1.5.0",
+    "moment": "^2.24.0",
+    "ora": "^3.4.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.0",
     "react-redux": "^5.0.7",
@@ -45,7 +50,13 @@
     "react-router-dom": "^4.3.1",
     "react-router-redux": "^4.0.8",
     "redux": "^4.0.0",
+    "rimraf": "^2.6.3",
+    "semver": "^6.1.1",
     "video-react": "^0.13.2"
   },
-  "description": ""
+  "description": "",
+  "engines": {
+    "node": ">=5.0",
+    "npm": ">=3.0"
+  }
 }
