--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "add-asset-html-webpack-plugin": "^3.1.3",
     "babel-loader": "^7.1.5",
     "babel-plugin-import": "^1.9.1",
     "babel-plugin-transform-runtime": "^6.23.0",
