--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "devDependencies": {
     "add-asset-html-webpack-plugin": "^3.1.3",
+    "autoprefixer": "^9.6.1",
     "babel-loader": "^7.1.5",
     "babel-plugin-import": "^1.9.1",
     "babel-plugin-transform-runtime": "^6.23.0",
@@ -27,6 +28,7 @@
     "less-loader": "^4.1.0",
     "mini-css-extract-plugin": "^0.7.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "postcss-loader": "^3.0.0",
     "redux-log": "^2.0.0",
     "style-loader": "^0.23.1",
     "uglifyjs-webpack-plugin": "^2.1.3",
@@ -34,15 +36,17 @@
     "webpack-cli": "^3.1.0",
     "webpack-dev-middleware": "^3.3.0",
     "webpack-hot-middleware": "^2.24.0",
-    "webpack-merge": "^4.1.4"
+    "webpack-merge": "^4.1.4",
+    "postcss-import": "^12.0.1",
+    "babel-core": "^6.26.3",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1"
   },
   "dependencies": {
     "antd": "^3.10.0",
-    "babel-core": "^6.26.3",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
     "chalk": "^2.4.2",
     "connect-history-api-fallback": "^1.5.0",
+    "docker": "^1.0.0",
     "moment": "^2.24.0",
     "ora": "^3.4.0",
     "react": "^16.5.2",
