--- a/package.json
+++ b/package.json
@@ -11,11 +11,24 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/cli": "^7.4.4",
+    "@babel/core": "^7.4.5",
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/plugin-proposal-decorators": "^7.4.4",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/plugin-transform-modules-commonjs": "^7.4.4",
+    "@babel/plugin-transform-runtime": "^7.4.4",
+    "@babel/preset-env": "^7.4.5",
+    "@babel/preset-react": "^7.0.0",
+    "react-loadable": "^5.5.0",
     "add-asset-html-webpack-plugin": "^3.1.3",
     "autoprefixer": "^9.6.1",
-    "babel-loader": "^7.1.5",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.0.0-beta.0",
     "babel-plugin-import": "^1.9.1",
     "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-preset-stage-1": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
@@ -28,21 +41,20 @@
     "less-loader": "^4.1.0",
     "mini-css-extract-plugin": "^0.7.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
     "redux-log": "^2.0.0",
     "style-loader": "^0.23.1",
-    "uglifyjs-webpack-plugin": "^2.1.3",
-    "webpack": "^4.20.2",
+    "terser-webpack-plugin": "^1.4.1",
+    "webpack": "^4.40.2",
     "webpack-cli": "^3.1.0",
     "webpack-dev-middleware": "^3.3.0",
     "webpack-hot-middleware": "^2.24.0",
-    "webpack-merge": "^4.1.4",
-    "postcss-import": "^12.0.1",
-    "babel-core": "^6.26.3",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1"
+    "webpack-merge": "^4.1.4"
   },
   "dependencies": {
+    "@babel/core": "^7.6.0",
+    "@babel/preset-env": "^7.6.0",
     "antd": "^3.10.0",
     "chalk": "^2.4.2",
     "connect-history-api-fallback": "^1.5.0",
