--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "chalk": "^2.4.2",
     "connect-history-api-fallback": "^1.5.0",
     "docker": "^1.0.0",
+    "eventsource-polyfill": "^0.9.6",
     "moment": "^2.24.0",
     "ora": "^3.4.0",
     "react": "^16.5.2",
