--- a/package.json
+++ b/package.json
@@ -20,20 +20,12 @@
     "@babel/plugin-transform-runtime": "^7.4.4",
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
-    "react-loadable": "^5.5.0",
     "add-asset-html-webpack-plugin": "^3.1.3",
     "autoprefixer": "^9.6.1",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^8.0.0-beta.0",
-    "babel-plugin-import": "^1.9.1",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "babel-preset-stage-1": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
-    "bundle-loader": "^0.5.6",
+    "babel-loader": "^8.0.6",
+    "babel-plugin-import": "1.12.0",
     "css-loader": "^1.0.0",
+    "core-js": "^3.1.4",
     "express": "^4.16.3",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "html-webpack-plugin": "^3.2.0",
@@ -43,6 +35,7 @@
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
+    "react-loadable": "^5.5.0",
     "redux-log": "^2.0.0",
     "style-loader": "^0.23.1",
     "terser-webpack-plugin": "^1.4.1",
