--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@babel/core": "^7.6.0",
     "@babel/preset-env": "^7.6.0",
     "antd": "^3.10.0",
+    "axios": "0.19.0",
     "chalk": "^2.4.2",
     "connect-history-api-fallback": "^1.5.0",
     "docker": "^1.0.0",
