--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@babel/preset-env": "^7.6.0",
     "antd": "^3.10.0",
     "axios": "0.19.0",
+    "bizcharts": "^3.5.5",
     "chalk": "^2.4.2",
     "connect-history-api-fallback": "^1.5.0",
     "docker": "^1.0.0",
