新增 构建文件

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "NODE_ENV=production webpack --config ./build/webpack.prod.conf.js",
     "start": "node ./build/dev.server.js",
-    "build:dll": "node build/dll.js"
+    "build:dll": "node build/dll.js",
+    "build:deploy": "./deploy.sh"
   },
   "author": "",
   "license": "ISC",
@@ -53,6 +54,7 @@
     "bizcharts": "^3.5.5",
     "chalk": "^2.4.2",
     "connect-history-api-fallback": "^1.5.0",
+    "cross-env": "^6.0.3",
     "docker": "^1.0.0",
     "eventsource-polyfill": "^0.9.6",
     "moment": "^2.24.0",
