--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "NODE_ENV=production webpack --config ./build/webpack.prod.conf.js",
     "start": "node ./build/dev.server.js",
     "build:dll": "node build/dll.js",
-    "build:deploy": "./deploy.sh"
+    "build:deploy": "./build/deploy.sh"
   },
   "author": "",
   "license": "ISC",
