--- a/deploy/Dockerfile
+++ b/deploy/Dockerfile
@@ -1,4 +1,4 @@
 FROM nginx:latest
-COPY ./dist /user/share/nginx/html/
+COPY ./dist /usr/share/nginx/html/
 COPY ./default.conf /etc/nginx/conf.d/
 EXPOSE 80
