--- a/package.json
+++ b/package.json
@@ -49,7 +49,6 @@
   "dependencies": {
     "antd": "^3.10.0",
     "axios": "0.19.0",
-    "bizcharts": "^3.5.5",
     "chalk": "^2.4.2",
     "connect-history-api-fallback": "^1.5.0",
     "cross-env": "^6.0.3",
@@ -65,8 +64,7 @@
     "react-router-redux": "^4.0.8",
     "redux": "^4.0.0",
     "rimraf": "^2.6.3",
-    "semver": "^6.1.1",
-    "video-react": "^0.13.2"
+    "semver": "^6.1.1"
   },
   "description": "",
   "engines": {
