--- a/package.json
+++ b/package.json
@@ -25,8 +25,9 @@
     "autoprefixer": "^9.6.1",
     "babel-loader": "^8.0.6",
     "babel-plugin-import": "1.12.0",
-    "css-loader": "^1.0.0",
+    "copy-webpack-plugin": "^5.1.1",
     "core-js": "^3.1.4",
+    "css-loader": "^1.0.0",
     "express": "^4.16.3",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "html-webpack-plugin": "^3.2.0",
@@ -39,6 +40,7 @@
     "react-loadable": "^5.5.0",
     "redux-log": "^2.0.0",
     "style-loader": "^0.23.1",
+    "systemjs": "^6.2.5",
     "terser-webpack-plugin": "^1.4.1",
     "webpack": "^4.40.2",
     "webpack-cli": "^3.1.0",
@@ -53,8 +55,11 @@
     "connect-history-api-fallback": "^1.5.0",
     "cross-env": "^6.0.3",
     "eventsource-polyfill": "^0.9.6",
+    "fs": "0.0.1-security",
+    "fs-extra": "^6.0.0",
     "moment": "^2.24.0",
     "ora": "^3.4.0",
+    "url-loader": "^2.0.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.0",
     "react-redux": "^5.0.7",
@@ -64,7 +69,9 @@
     "react-router-redux": "^4.0.8",
     "redux": "^4.0.0",
     "rimraf": "^2.6.3",
-    "semver": "^6.1.1"
+    "semver": "^6.1.1",
+    "single-spa": "^5.1.1",
+    "single-spa-react": "^2.11.1"
   },
   "description": "",
   "engines": {
