--- a/package.json
+++ b/package.json
@@ -40,13 +40,13 @@
     "react-loadable": "^5.5.0",
     "redux-log": "^2.0.0",
     "style-loader": "^0.23.1",
-    "systemjs": "^6.2.5",
     "terser-webpack-plugin": "^1.4.1",
     "webpack": "^4.40.2",
     "webpack-cli": "^3.1.0",
     "webpack-dev-middleware": "^3.3.0",
     "webpack-hot-middleware": "^2.24.0",
-    "webpack-merge": "^4.1.4"
+    "webpack-merge": "^4.1.4",
+    "file-loader": "1.1.5"
   },
   "dependencies": {
     "antd": "^3.10.0",
@@ -59,7 +59,6 @@
     "fs-extra": "^6.0.0",
     "moment": "^2.24.0",
     "ora": "^3.4.0",
-    "url-loader": "^2.0.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.0",
     "react-redux": "^5.0.7",
@@ -70,8 +69,9 @@
     "redux": "^4.0.0",
     "rimraf": "^2.6.3",
     "semver": "^6.1.1",
-    "single-spa": "^5.1.1",
-    "single-spa-react": "^2.11.1"
+    "single-spa": "^5.3.4",
+    "single-spa-react": "^2.11.1",
+    "url-loader": "^2.0.0"
   },
   "description": "",
   "engines": {
