--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "NODE_ENV=production webpack --config ./build/webpack.prod.conf.js",
+    "build:test": "NODE_ENV=production WEBPACK_ENV=test webpack --config ./build/webpack.prod.conf.js",
     "start": "node ./build/dev.server.js",
     "build:dll": "node build/dll.js",
     "build:deploy": "./build/deploy.sh"
@@ -25,10 +26,11 @@
     "autoprefixer": "^9.6.1",
     "babel-loader": "^8.0.6",
     "babel-plugin-import": "1.12.0",
-    "css-loader": "^1.0.0",
     "core-js": "^3.1.4",
+    "css-loader": "^1.0.0",
     "express": "^4.16.3",
     "friendly-errors-webpack-plugin": "^1.7.0",
+    "happypack": "^5.0.1",
     "html-webpack-plugin": "^3.2.0",
     "less": "^3.8.1",
     "less-loader": "^4.1.0",
@@ -38,9 +40,12 @@
     "postcss-loader": "^3.0.0",
     "react-loadable": "^5.5.0",
     "redux-log": "^2.0.0",
+    "speed-measure-webpack-plugin": "^1.3.3",
     "style-loader": "^0.23.1",
     "terser-webpack-plugin": "^1.4.1",
+    "thread-loader": "^2.1.3",
     "webpack": "^4.40.2",
+    "webpack-bundle-analyzer": "^3.7.0",
     "webpack-cli": "^3.1.0",
     "webpack-dev-middleware": "^3.3.0",
     "webpack-hot-middleware": "^2.24.0",
