--- a/package.json
+++ b/package.json
@@ -49,17 +49,20 @@
     "webpack-cli": "^3.1.0",
     "webpack-dev-middleware": "^3.3.0",
     "webpack-hot-middleware": "^2.24.0",
-    "webpack-merge": "^4.1.4"
+    "webpack-merge": "^4.1.4",
+    "connect-history-api-fallback": "^1.5.0",
+    "ora": "^3.4.0",
+    "eventsource-polyfill": "^0.9.6",
+    "rimraf": "^2.6.3",
+    "semver": "^6.1.1",
+    "chalk": "^2.4.2"
   },
   "dependencies": {
-    "antd": "^3.10.0",
+    "antd": "^4.0.0",
     "axios": "0.19.0",
-    "chalk": "^2.4.2",
-    "connect-history-api-fallback": "^1.5.0",
+    "biosan": "^1.0.7",
     "cross-env": "^6.0.3",
-    "eventsource-polyfill": "^0.9.6",
     "moment": "^2.24.0",
-    "ora": "^3.4.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.0",
     "react-redux": "^5.0.7",
@@ -67,9 +70,7 @@
     "react-router-config": "^1.0.0-beta.3",
     "react-router-dom": "^4.3.1",
     "react-router-redux": "^4.0.8",
-    "redux": "^4.0.0",
-    "rimraf": "^2.6.3",
-    "semver": "^6.1.1"
+    "redux": "^4.0.0"
   },
   "description": "",
   "engines": {
