--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "bizcharts": "^3.5.5",
     "chalk": "^2.4.2",
     "connect-history-api-fallback": "^1.5.0",
+    "biosan": "^1.0.8",
     "cross-env": "^6.0.3",
     "docker": "^1.0.0",
     "eventsource-polyfill": "^0.9.6",
