--- a/.babelrc
+++ b/.babelrc
@@ -5,9 +5,7 @@
       {
         "targets": {
           "browsers": ["> 1%", "last 2 versions", "not ie <= 8"]
-        },
-        "useBuiltIns": "usage",
-        "corejs": 3
+        }
       }
     ],
     "@babel/preset-react"
@@ -26,12 +24,20 @@
         "loose": true
       }
     ],
-    "@babel/plugin-transform-runtime",
+    [
+      "@babel/plugin-transform-runtime",
+      {
+        "corejs": 2,
+        "helpers": true,
+        "regenerator": true,
+        "useESModules": false
+      }
+    ],
     [
       "import",
       {
         "libraryName": "antd",
-        "libraryDirectory": "es",
+        "libraryDirectory": "lib",
         "style": true
       }
     ],
