--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "babel-loader": "^8.0.6",
     "babel-plugin-import": "1.12.0",
     "css-loader": "^1.0.0",
-    "core-js": "^3.1.4",
     "express": "^4.16.3",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "html-webpack-plugin": "^3.2.0",
@@ -47,14 +46,13 @@
     "webpack-merge": "^4.1.4"
   },
   "dependencies": {
-    "@babel/core": "^7.6.0",
-    "@babel/preset-env": "^7.6.0",
+    "@babel/runtime-corejs2": "^7.11.2",
     "antd": "^3.10.0",
     "axios": "0.19.0",
+    "biosan-front-ui": "^1.0.8",
     "bizcharts": "^3.5.5",
     "chalk": "^2.4.2",
     "connect-history-api-fallback": "^1.5.0",
-    "biosan": "^1.0.8",
     "cross-env": "^6.0.3",
     "docker": "^1.0.0",
     "eventsource-polyfill": "^0.9.6",
