--- a/package.json
+++ b/package.json
@@ -47,6 +47,9 @@
   },
   "dependencies": {
     "@babel/runtime-corejs2": "^7.11.2",
+    "ag-grid-community": "^24.0.0",
+    "ag-grid-enterprise": "^24.0.0",
+    "ag-grid-react": "^24.0.0",
     "antd": "^3.10.0",
     "axios": "0.19.0",
     "biosan-front-ui": "^1.0.8",
