--- a/.babelrc
+++ b/.babelrc
@@ -3,38 +3,10 @@
     [
       "@babel/preset-env",
       {
-        "targets": {
-          "browsers": ["> 1%", "last 2 versions", "not ie <= 8"]
-        },
-        "useBuiltIns": "usage",
-        "corejs": 3
+        "targets": "defaults"
       }
     ],
     "@babel/preset-react"
   ],
-  "plugins": [
-    "@babel/plugin-syntax-dynamic-import",
-    [
-      "@babel/plugin-proposal-decorators",
-      {
-        "legacy": true
-      }
-    ],
-    [
-      "@babel/plugin-proposal-class-properties",
-      {
-        "loose": true
-      }
-    ],
-    "@babel/plugin-transform-runtime",
-    [
-      "import",
-      {
-        "libraryName": "antd",
-        "libraryDirectory": "es",
-        "style": true
-      }
-    ],
-    "@babel/plugin-transform-modules-commonjs"
-  ]
+  "plugins": []
 }
