--- a/package.json
+++ b/package.json
@@ -7,68 +7,36 @@
     "build": "NODE_ENV=production webpack --config ./build/webpack.prod.conf.js",
     "start": "node ./build/dev.server.js",
     "build:dll": "node build/dll.js",
-    "build:deploy": "./build/deploy.sh"
+    "build:deploy": "./build/deploy.sh",
+    "build:dev": "NODE_ENV=development webpack --config ./build/testWebpack.config.js",
+    "build:prod": "NODE_ENV=production webpack --config ./build/testWebpack.config.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/cli": "^7.4.4",
-    "@babel/core": "^7.4.5",
-    "@babel/plugin-proposal-class-properties": "^7.4.4",
-    "@babel/plugin-proposal-decorators": "^7.4.4",
-    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@babel/plugin-transform-modules-commonjs": "^7.4.4",
-    "@babel/plugin-transform-runtime": "^7.4.4",
-    "@babel/preset-env": "^7.4.5",
-    "@babel/preset-react": "^7.0.0",
-    "add-asset-html-webpack-plugin": "^3.1.3",
-    "autoprefixer": "^9.6.1",
-    "babel-loader": "^8.0.6",
-    "babel-plugin-import": "1.12.0",
-    "css-loader": "^1.0.0",
-    "core-js": "^3.1.4",
-    "express": "^4.16.3",
-    "friendly-errors-webpack-plugin": "^1.7.0",
-    "html-webpack-plugin": "^3.2.0",
-    "less": "^3.8.1",
-    "less-loader": "^4.1.0",
-    "mini-css-extract-plugin": "^0.7.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.1",
-    "postcss-import": "^12.0.1",
-    "postcss-loader": "^3.0.0",
-    "react-loadable": "^5.5.0",
-    "redux-log": "^2.0.0",
-    "style-loader": "^0.23.1",
-    "terser-webpack-plugin": "^1.4.1",
-    "webpack": "^4.40.2",
-    "webpack-cli": "^3.1.0",
-    "webpack-dev-middleware": "^3.3.0",
-    "webpack-hot-middleware": "^2.24.0",
-    "webpack-merge": "^4.1.4"
+    "@babel/cli": "^7.14.5",
+    "@babel/core": "^7.14.6",
+    "@babel/preset-env": "^7.14.7",
+    "@babel/preset-react": "^7.14.5",
+    "babel-loader": "^8.2.2",
+    "connect-history-api-fallback": "^1.6.0",
+    "cross-env": "^7.0.3",
+    "express": "^4.17.1",
+    "html-webpack-plugin": "^5.3.2",
+    "terser-webpack-plugin": "^5.1.4",
+    "webpack": "^5.42.0",
+    "webpack-cli": "^4.7.2",
+    "webpack-dev-middleware": "^5.0.0",
+    "webpack-hot-middleware": "^2.25.0",
+    "webpack-merge": "^5.8.0"
   },
   "dependencies": {
-    "antd": "^3.10.0",
-    "axios": "0.19.0",
-    "chalk": "^2.4.2",
-    "connect-history-api-fallback": "^1.5.0",
-    "cross-env": "^6.0.3",
-    "eventsource-polyfill": "^0.9.6",
-    "moment": "^2.24.0",
-    "ora": "^3.4.0",
-    "react": "^16.5.2",
-    "react-dom": "^16.5.0",
-    "react-redux": "^5.0.7",
-    "react-router": "^4.3.1",
-    "react-router-config": "^1.0.0-beta.3",
-    "react-router-dom": "^4.3.1",
-    "react-router-redux": "^4.0.8",
-    "redux": "^4.0.0",
-    "rimraf": "^2.6.3",
-    "semver": "^6.1.1"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "description": "",
   "engines": {
-    "node": ">=5.0",
+    "node": ">=10.13.0",
     "npm": ">=3.0"
   }
 }
