--- a/package.json
+++ b/package.json
@@ -16,13 +16,19 @@
   "devDependencies": {
     "@babel/cli": "^7.14.5",
     "@babel/core": "^7.14.6",
+    "@babel/plugin-transform-runtime": "^7.14.5",
     "@babel/preset-env": "^7.14.7",
     "@babel/preset-react": "^7.14.5",
     "babel-loader": "^8.2.2",
+    "babel-plugin-import": "^1.13.3",
     "connect-history-api-fallback": "^1.6.0",
     "cross-env": "^7.0.3",
+    "css-loader": "^5.2.6",
     "express": "^4.17.1",
     "html-webpack-plugin": "^5.3.2",
+    "less": "^4.1.1",
+    "less-loader": "^10.0.1",
+    "style-loader": "^3.1.0",
     "terser-webpack-plugin": "^5.1.4",
     "webpack": "^5.42.0",
     "webpack-cli": "^4.7.2",
@@ -31,6 +37,11 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
+    "@babel/runtime": "^7.14.8",
+    "@babel/runtime-corejs3": "^7.14.8",
+    "antd": "^4.16.7",
+    "biosan-front": "^0.3.0",
+    "core-js": "^3.15.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
